Change List.of to Arrays.asList